--- a/theme/css/refactor.css
+++ b/theme/css/refactor.css
@@ -14,3 +14,19 @@
     width: 50px;
     vertical-align: middle;
 }
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+.a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
